hamid vai er page add korlam

--- a/Details.html
+++ b/Details.html
@@ -98,10 +98,10 @@
               <a class="nav-link" href="#">Courses</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="instructors.html">Trainers</a>
+              <a class="nav-link active" href="instructors.html">Trainers</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="contact.html">Contact Us</a>
+              <a class="nav-link" href="contact.html">Contact Us</a>
             </li>
           </ul>
           <form class="d-flex" role="search">
@@ -117,202 +117,64 @@
       </div>
     </nav>
     <!-- ===== navbar-part end ===== -->
-    <!-- ===== banner-part start ===== -->
-    <main id="banner_part" class="d-flex align-items-center">
-      <div class="swiper mySwiper">
-        <div class="swiper-wrapper">
-          <div class="swiper-slide">
-            <img src="assets/image/banner-1.jpg" alt="" />
-            <div class="overlay">
-              <h1>Start your career with certification</h1>
-              <p>
-                Training Pandit provides quality skill development training with
-                a host of experienced mentors.
-              </p>
-              <span>
-                <a href="#" class="theme-btn">start learning</a>
-                <a href="#" class="theme-btn ms-2">view all courses</a>
-              </span>
-            </div>
-          </div>
-          <div class="swiper-slide">
-            <img src="assets/image/banner-2.jpg" alt="" />
-            <div class="overlay">
-              <h1>Start your career with certification</h1>
-              <p>
-                Training Pandit provides quality skill development training with
-                a host of experienced mentors.
-              </p>
-              <span>
-                <a href="#" class="theme-btn">start learning</a>
-                <a href="#" class="theme-btn ms-2">view all courses</a>
-              </span>
-            </div>
-          </div>
-        </div>
-      </div>
-    </main>
-    <!-- ===== banner-part end ===== -->
-    <!-- ===== contact-form-part start ===== -->
-    <section class="section-padding" id="contact-form-part">
+    <!-- ===== Instructor-Details-part start ===== -->
+    <section class="details-part my-4" id="details-part">
       <div class="container">
         <div class="row">
-          <div class="col-md-12 text-center">
-            <h2>Get In Touch</h2>
+          <div class="biography py-5">
+            <h2>Instructor Biography</h2>
           </div>
-        </div>
-        <div class="row">
-          <div class="col-md-6 offset-md-3">
-            <div class="contact-form">
-              <div class="row mb-3">
-                <label for="colFormLabel" class="col-sm-4 col-form-label"
-                  >Name:</label
-                >
-                <div class="col-sm-8">
-                  <input
-                    type="text"
-                    class="form-control"
-                    id="colFormLabel"
-                    placeholder="Enter Your Name"
-                  />
-                </div>
-              </div>
-              <div class="row mb-3">
-                <label for="colFormLabel" class="col-sm-4 col-form-label"
-                  >Name:</label
-                >
-                <div class="col-sm-8">
-                  <div class="form-check form-check-inline">
-                    <input
-                      class="form-check-input"
-                      type="radio"
-                      name="inlineRadioOptions"
-                      id="inlineRadio1"
-                      value="option1"
-                    />
-                    <label class="form-check-label" for="inlineRadio1"
-                      >Individual</label
-                    >
-                  </div>
-                  <div class="form-check form-check-inline">
-                    <input
-                      class="form-check-input"
-                      type="radio"
-                      name="inlineRadioOptions"
-                      id="inlineRadio2"
-                      value="option2"
-                    />
-                    <label class="form-check-label" for="inlineRadio2"
-                      >Company</label
-                    >
-                  </div>
-                </div>
-                <div class="row mb-3">
-                  <label for="colFormLabel" class="col-sm-4 col-form-label"
-                    >Company Name:</label
-                  >
-                  <div class="col-sm-8">
-                    <input
-                      type="text"
-                      class="form-control"
-                      id="colFormLabel"
-                      placeholder="Enter Your Company Name"
-                    />
-                  </div>
-                </div>
-                <div class="row mb-3">
-                  <label for="colFormLabel" class="col-sm-4 col-form-label"
-                    >Purpose Reason:</label
-                  >
-                  <div class="col-sm-8">
-                    <input
-                      type="text"
-                      class="form-control"
-                      id="colFormLabel"
-                      placeholder="Enter Your Purpose Reason"
-                    />
-                  </div>
-                </div>
-                <div class="row mb-3">
-                  <label for="colFormLabel" class="col-sm-4 col-form-label"
-                    >Details:</label
-                  >
-                  <div class="col-sm-8">
-                    <textarea
-                      class="form-control"
-                      id="colFormLabel"
-                      rows="3"
-                      placeholder="Enter Your Message Details"
-                    ></textarea>
-                  </div>
-                </div>
-
-                <div class="col-12 text-center">
-                  <button type="submit" class="btn theme-btn">Sign in</button>
-                </div>
-              </div>
+          <div class="col-md-3">
+            <div class="image">
+              <img class="w-100" src="assets/image/mm6.jpg" alt="teacher" />
             </div>
           </div>
-        </div>
-      </div>
-      <div id="particles-js"></div>
-    </section>
-    <!-- ===== contact-form-part end ===== -->
-    <!-- ===== office-part start ===== -->
-    <section id="office-part">
-      <div class="container">
-        <div class="office-details-box">
-          <div class="row">
-            <div class="col-md-6">
-              <h4>Head Office Address - GEC</h4>
-              <address>
-                3rd floor,125 K.B. <br />
-                Fozlul Kader Road(Near Oli kha mosque) <br />
-                Chattogram, Bangladesh
-              </address>
-              <ul>
-                <li>
-                  <i class="fa-regular fa-envelope"></i> info@trainingpundit.com
-                </li>
-                <li><i class="fa-brands fa-whatsapp"></i> 01531-884554</li>
-                <li><i class="fa-solid fa-phone"></i> 01531-884554</li>
-              </ul>
+          <div class="col-md-9">
+            <div class="profile-detail">
+              <h1>Instructor Name</h1>
+              <h4>Web Developer</h4>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Officiis fugiat nesciunt quo obcaecati velit minima est facilis
+                sequi? Facere accusamus adipisci reiciendis iure necessitatibus
+                eos in ex corporis quidem ipsum corrupti, provident laboriosam
+                vero sapiente animi iusto culpa ut saepe. Itaque, aut maiores
+                sunt quisquam modi at cupiditate dolore vel! Minus magni ut
+                debitis, iusto maxime obcaecati tempora quod porro quam aliquid,
+                accusamus repellat saepe. Similique, deleniti omnis eveniet
+                facilis animi sit velit modi aperiam saepe dolore sed, cum iure
+                ut, vero quod accusamus ab laboriosam laborum qui. Nostrum
+                recusandae, unde, magni, amet incidunt sequi vitae voluptatum
+                sint eligendi fuga doloribus saepe eaque. Illo incidunt minus
+                ullam eveniet dolor nemo debitis doloribus. Neque cumque, sed
+                quas debitis reiciendis est nesciunt illo ad maxime sunt
+                consequuntur perferendis facere magni voluptates. Laboriosam
+                nisi doloribus quisquam beatae eum et, esse sapiente harum, sint
+                est incidunt praesentium suscipit tempora maiores vel assumenda!
+                Aliquam reprehenderit laudantium corporis quae architecto minima
+                vel tempora nihil rem optio ipsam, ex voluptatum voluptate. Ad
+                in nisi eligendi qui cupiditate, laudantium harum enim facere
+                quo iure assumenda velit numquam architecto excepturi doloremque
+                porro eos! Alias est voluptate aspernatur enim sit
+                exercitationem voluptatibus recusandae omnis, esse sequi,
+                accusamus possimus autem quos?
+              </p>
             </div>
-            <div class="col-md-6">
-              <h4>Branch Address - Chawkbazar</h4>
-              <address>
-                3rd floor,125 K.B. <br />
-                Fozlul Kader Road(Near Oli kha mosque) <br />
-                Chattogram, Bangladesh
-              </address>
+            <div class="skill-bar my-5">
+              <h3>Special Skill & Expertness</h3>
               <ul>
-                <li>
-                  Our support available to help you 24 hours a day, seven days a
-                  week
-                </li>
-                <li>
-                  Opening Hours: sat - Tues : 8.00 am - 5.00 pm, Friday Closed
-                </li>
+                <li class="web">Web Design</li>
+                <li class="wordpress">Wordpress Theme Development</li>
+                <li class="php">Php Larabel</li>
+                <li class="js">Java Script</li>
+                <li class="graphics">Graphics Design</li>
               </ul>
             </div>
           </div>
         </div>
       </div>
     </section>
-    <!-- ===== office-part end ===== -->
-    <!-- ===== location-map-part start ===== -->
-    <section id="location">
-      <iframe
-        src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d3689.5599159679705!2d91.84086067603064!3d22.370240040355338!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sbn!2sbd!4v1683626609552!5m2!1sbn!2sbd"
-        width="100%"
-        height="450"
-        style="border: 0"
-        allowfullscreen=""
-        loading="lazy"
-        referrerpolicy="no-referrer-when-downgrade"
-      ></iframe>
-    </section>
-    <!-- ===== location-map-part end ===== -->
+    <!-- ===== Instructor-Details-part end ===== -->
     <!-- ===== footer-part start ===== -->
     <footer id="footer_part" class="section-padding">
       <div class="container">
