--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <link rel="stylesheet" href="assets/css/font.all.min.css" />
     <!-- ===== bootstrap link ===== -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
+    <!-- ===== owl carousel link ===== -->
+    <link rel="stylesheet" href="assets/css/owl.carousel.css" />
+    <link rel="stylesheet" href="assets/css/owl.theme.default.css" />
     <!-- ===== swiperjs css link ===== -->
     <link
       rel="stylesheet"
@@ -97,7 +100,7 @@
               <a class="nav-link" href="#">Courses</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Trainers</a>
+              <a class="nav-link" href="instructors.html">Trainers</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contact.html">Contact Us</a>
@@ -1002,6 +1005,8 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <!-- ===== bootstrap js link ===== -->
     <script src="assets/js/bootstrap.bundle.min.js"></script>
+    <!-- ===== owl carousel js link ===== -->
+    <script src="assets/js/owl.carousel.min.js"></script>
     <!-- ===== swiper js link ===== -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <!-- ===== partical js link ===== -->
