--- a/index.html
+++ b/index.html
@@ -615,15 +615,15 @@
             <h2>Our Top instructors</h2>
           </div>
           <div class="col-md-3">
-            <div class="card news-box">
-              <div class="news-box-img">
+            <div class="card instructor-box">
+              <div class="instructor-box-img">
                 <img
                   src="assets/image/sumit.jpg"
                   alt="news-img"
                   class="img-fluid"
                 />
               </div>
-              <div class="news-box-content">
+              <div class="instructor-box-content">
                 <h5>Instructor Name Here</h5>
                 <p>
                   About instructor Lorem ipsum dolor sit amet consectetur
@@ -636,15 +636,15 @@
             </div>
           </div>
           <div class="col-md-3">
-            <div class="card news-box">
-              <div class="news-box-img">
+            <div class="card instructor-box">
+              <div class="instructor-box-img">
                 <img
                   src="assets/image/hasin.jpg"
                   alt="news-img"
                   class="img-fluid"
                 />
               </div>
-              <div class="news-box-content">
+              <div class="instructor-box-content">
                 <h5>Instructor Name Here</h5>
                 <p>
                   About instructor Lorem ipsum dolor sit amet consectetur
@@ -657,36 +657,36 @@
             </div>
           </div>
           <div class="col-md-3">
-            <div class="card news-box">
-              <div class="news-box-img">
-                <img
-                  src="assets/image/rabbil.jpg"
-                  alt="news-img"
-                  class="img-fluid"
-                />
-              </div>
-              <div class="news-box-content">
-                <h5>Instructor Name Here</h5>
-                <p>
-                  About instructor Lorem ipsum dolor sit amet consectetur
-                  adipisicing elit. Deserunt, distinctio...
-                </p>
-                <a href="#"
-                  >read more <i class="fa-solid fa-angles-right"></i
-                ></a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3">
-            <div class="card news-box">
-              <div class="news-box-img">
+            <div class="card instructor-box">
+              <div class="instructor-box-img">
                 <img
                   src="assets/image/stacklearner.jpg"
                   alt="news-img"
                   class="img-fluid"
                 />
               </div>
-              <div class="news-box-content">
+              <div class="instructor-box-content">
+                <h5>Instructor Name Here</h5>
+                <p>
+                  About instructor Lorem ipsum dolor sit amet consectetur
+                  adipisicing elit. Deserunt, distinctio...
+                </p>
+                <a href="#"
+                  >read more <i class="fa-solid fa-angles-right"></i
+                ></a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card instructor-box">
+              <div class="instructor-box-img">
+                <img
+                  src="assets/image/rabbil.jpg"
+                  alt="news-img"
+                  class="img-fluid"
+                />
+              </div>
+              <div class="instructor-box-content">
                 <h5>Instructor Name Here</h5>
                 <p>
                   About instructor Lorem ipsum dolor sit amet consectetur
@@ -877,6 +877,17 @@
                 Training Pandit provides online IT and soft skills development
                 training.
               </p>
+              <div class="subscribe">
+                <input
+                  type="text"
+                  name=""
+                  id=""
+                  placeholder="enter your email"
+                />
+                <button class="" id="">
+                  <i class="fa-solid fa-bell"></i>
+                </button>
+              </div>
               <ul class="social-link">
                 <li>
                   <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
@@ -893,7 +904,7 @@
               </ul>
             </div>
           </div>
-          <div class="col-md-3">
+          <div class="col-md-2">
             <div class="footer-links">
               <h4>Quick Links</h4>
               <ul>
@@ -917,7 +928,7 @@
               </ul>
             </div>
           </div>
-          <div class="col-md-3">
+          <div class="col-md-4">
             <div class="address-part">
               <h4>Communication</h4>
               <div class="row">
@@ -947,6 +958,28 @@
                   <p>info@trainingpundit.com</p>
                 </div>
               </div>
+              <div class="message d-flex align-items-center">
+                <textarea
+                  type="text"
+                  rows="1"
+                  class="form-control me-2"
+                  placeholder="enter your message"
+                ></textarea>
+                <button class="" id="">Send</button>
+              </div>
+              <!-- <div class="row">
+                <div class="col-10">
+                  <textarea
+                    type="text"
+                    name=""
+                    class="form-control"
+                    placeholder="enter your message"
+                  ></textarea>
+                </div>
+                <div class="col-2">
+                  <button class="" id="">send</button>
+                </div>
+              </div> -->
             </div>
           </div>
         </div>
