swiper js convert into owl-carousel

--- a/index.html
+++ b/index.html
@@ -195,59 +195,63 @@
           <div class="col-12 text-center">
             <h2>What do you want to learn?</h2>
           </div>
-          <div class="col-md-3">
-            <div class="goal-item text-center">
-              <div class="goal-item-img">
-                <img
-                  src="assets/image/web-design.png"
-                  alt="web-design-icon"
-                  class="img-fluid"
-                />
-              </div>
-              <div class="goal-item-content">
-                <h4>Web Design and development</h4>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3">
-            <div class="goal-item text-center">
-              <div class="goal-item-img">
-                <img
-                  src="assets/image/sales.png"
-                  alt="web-design-icon"
-                  class="img-fluid"
-                />
-              </div>
-              <div class="goal-item-content">
-                <h4>Business and Marketing</h4>
+        </div>
+        <div class="row">
+          <div class="owl-carousel your-goal owl-theme">
+            <div>
+              <div class="goal-item text-center">
+                <div class="goal-item-img">
+                  <img
+                    src="assets/image/web-design.png"
+                    alt="web-design-icon"
+                    class="img-fluid"
+                  />
+                </div>
+                <div class="goal-item-content">
+                  <h4>Web Design and development</h4>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="col-md-3">
-            <div class="goal-item text-center">
-              <div class="goal-item-img">
-                <img
-                  src="assets/image/illustration.png"
-                  alt="web-design-icon"
-                  class="img-fluid"
-                />
-              </div>
-              <div class="goal-item-content">
-                <h4>Creative Design</h4>
+            <div>
+              <div class="goal-item text-center">
+                <div class="goal-item-img">
+                  <img
+                    src="assets/image/sales.png"
+                    alt="web-design-icon"
+                    class="img-fluid"
+                  />
+                </div>
+                <div class="goal-item-content">
+                  <h4>Business and Marketing</h4>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="col-md-3">
-            <div class="goal-item text-center">
-              <div class="goal-item-img">
-                <img
-                  src="assets/image/certificate.png"
-                  alt="web-design-icon"
-                  class="img-fluid"
-                />
+            <div>
+              <div class="goal-item text-center">
+                <div class="goal-item-img">
+                  <img
+                    src="assets/image/illustration.png"
+                    alt="web-design-icon"
+                    class="img-fluid"
+                  />
+                </div>
+                <div class="goal-item-content">
+                  <h4>Creative Design</h4>
+                </div>
               </div>
-              <div class="goal-item-content">
-                <h4>certification</h4>
+            </div>
+            <div>
+              <div class="goal-item text-center">
+                <div class="goal-item-img">
+                  <img
+                    src="assets/image/certificate.png"
+                    alt="web-design-icon"
+                    class="img-fluid"
+                  />
+                </div>
+                <div class="goal-item-content">
+                  <h4>certification</h4>
+                </div>
               </div>
             </div>
           </div>
@@ -433,59 +437,77 @@
           <div class="col-12 text-center">
             <h2>Our Top Category Courses</h2>
           </div>
-          <div class="col-md-3">
-            <div class="goal-item text-center">
-              <div class="goal-item-img">
-                <img
-                  src="assets/image/web-design.png"
-                  alt="web-design-icon"
-                  class="img-fluid"
-                />
-              </div>
-              <div class="goal-item-content">
-                <h4>Web Design</h4>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3">
-            <div class="goal-item text-center">
-              <div class="goal-item-img">
-                <img
-                  src="assets/image/web-design.png"
-                  alt="web-design-icon"
-                  class="img-fluid"
-                />
-              </div>
-              <div class="goal-item-content">
-                <h4>Web Development</h4>
+        </div>
+        <div class="row">
+          <div class="owl-carousel top-category-carousel owl-theme">
+            <div>
+              <div class="goal-item text-center">
+                <div class="goal-item-img">
+                  <img
+                    src="assets/image/web-design.png"
+                    alt="web-design-icon"
+                    class="img-fluid"
+                  />
+                </div>
+                <div class="goal-item-content">
+                  <h4>Web Design</h4>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="col-md-3">
-            <div class="goal-item text-center">
-              <div class="goal-item-img">
-                <img
-                  src="assets/image/sales.png"
-                  alt="web-design-icon"
-                  class="img-fluid"
-                />
-              </div>
-              <div class="goal-item-content">
-                <h4>SEO and Degital Marketing</h4>
+            <div>
+              <div class="goal-item text-center">
+                <div class="goal-item-img">
+                  <img
+                    src="assets/image/web-design.png"
+                    alt="web-design-icon"
+                    class="img-fluid"
+                  />
+                </div>
+                <div class="goal-item-content">
+                  <h4>Web Development</h4>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="col-md-3">
-            <div class="goal-item text-center">
-              <div class="goal-item-img">
-                <img
-                  src="assets/image/illustration.png"
-                  alt="web-design-icon"
-                  class="img-fluid"
-                />
+            <div>
+              <div class="goal-item text-center">
+                <div class="goal-item-img">
+                  <img
+                    src="assets/image/sales.png"
+                    alt="web-design-icon"
+                    class="img-fluid"
+                  />
+                </div>
+                <div class="goal-item-content">
+                  <h4>SEO and Degital Marketing</h4>
+                </div>
               </div>
-              <div class="goal-item-content">
-                <h4>Graphic Design</h4>
+            </div>
+            <div>
+              <div class="goal-item text-center">
+                <div class="goal-item-img">
+                  <img
+                    src="assets/image/illustration.png"
+                    alt="web-design-icon"
+                    class="img-fluid"
+                  />
+                </div>
+                <div class="goal-item-content">
+                  <h4>Graphic Design</h4>
+                </div>
+              </div>
+            </div>
+            <div>
+              <div class="goal-item text-center">
+                <div class="goal-item-img">
+                  <img
+                    src="assets/image/illustration.png"
+                    alt="web-design-icon"
+                    class="img-fluid"
+                  />
+                </div>
+                <div class="goal-item-content">
+                  <h4>Graphic Design</h4>
+                </div>
               </div>
             </div>
           </div>
@@ -587,6 +609,95 @@
       </div>
     </section>
     <!-- ===== success-story-part end ===== -->
+    <!-- ===== feature-course-part start ===== -->
+    <section id="feature-part" class="section-padding">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 text-center">
+            <h2>Featured Subjects By Categories</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="swiper feature-categories">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <div class="feature-item text-center">
+                  <div class="feature-item-img">
+                    <img
+                      src="assets/image/react.png"
+                      alt="web-design-icon"
+                      class="img-fluid"
+                    />
+                  </div>
+                  <div class="feature-item-content">
+                    <h4>React</h4>
+                  </div>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="feature-item text-center">
+                  <div class="feature-item-img">
+                    <img
+                      src="assets/image/vue.png"
+                      alt="web-design-icon"
+                      class="img-fluid"
+                    />
+                  </div>
+                  <div class="feature-item-content">
+                    <h4>VUE</h4>
+                  </div>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="feature-item text-center">
+                  <div class="feature-item-img">
+                    <img
+                      src="assets/image/node.png"
+                      alt="web-design-icon"
+                      class="img-fluid"
+                    />
+                  </div>
+                  <div class="feature-item-content">
+                    <h4>Node js</h4>
+                  </div>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="feature-item text-center">
+                  <div class="feature-item-img">
+                    <img
+                      src="assets/image/laravel.png"
+                      alt="web-design-icon"
+                      class="img-fluid"
+                    />
+                  </div>
+                  <div class="feature-item-content">
+                    <h4>Laravel</h4>
+                  </div>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="feature-item text-center">
+                  <div class="feature-item-img">
+                    <img
+                      src="assets/image/react.png"
+                      alt="web-design-icon"
+                      class="img-fluid"
+                    />
+                  </div>
+                  <div class="feature-item-content">
+                    <h4>React</h4>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev"></div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- ===== feature-course-part end ===== -->
     <!-- ===== become-instructor-part start ===== -->
     <section id="become-instructor-part" class="become-instructor">
       <div class="container">
