--- a/index.html
+++ b/index.html
@@ -618,81 +618,77 @@
           </div>
         </div>
         <div class="row">
-          <div class="swiper feature-categories">
-            <div class="swiper-wrapper">
-              <div class="swiper-slide">
-                <div class="feature-item text-center">
-                  <div class="feature-item-img">
-                    <img
-                      src="assets/image/react.png"
-                      alt="web-design-icon"
-                      class="img-fluid"
-                    />
-                  </div>
-                  <div class="feature-item-content">
-                    <h4>React</h4>
-                  </div>
+          <div class="owl-carousel top-category-carousel owl-theme">
+            <div>
+              <div class="feature-item text-center">
+                <div class="feature-item-img">
+                  <img
+                    src="assets/image/react.png"
+                    alt="web-design-icon"
+                    class="img-fluid"
+                  />
                 </div>
-              </div>
-              <div class="swiper-slide">
-                <div class="feature-item text-center">
-                  <div class="feature-item-img">
-                    <img
-                      src="assets/image/vue.png"
-                      alt="web-design-icon"
-                      class="img-fluid"
-                    />
-                  </div>
-                  <div class="feature-item-content">
-                    <h4>VUE</h4>
-                  </div>
-                </div>
-              </div>
-              <div class="swiper-slide">
-                <div class="feature-item text-center">
-                  <div class="feature-item-img">
-                    <img
-                      src="assets/image/node.png"
-                      alt="web-design-icon"
-                      class="img-fluid"
-                    />
-                  </div>
-                  <div class="feature-item-content">
-                    <h4>Node js</h4>
-                  </div>
-                </div>
-              </div>
-              <div class="swiper-slide">
-                <div class="feature-item text-center">
-                  <div class="feature-item-img">
-                    <img
-                      src="assets/image/laravel.png"
-                      alt="web-design-icon"
-                      class="img-fluid"
-                    />
-                  </div>
-                  <div class="feature-item-content">
-                    <h4>Laravel</h4>
-                  </div>
-                </div>
-              </div>
-              <div class="swiper-slide">
-                <div class="feature-item text-center">
-                  <div class="feature-item-img">
-                    <img
-                      src="assets/image/react.png"
-                      alt="web-design-icon"
-                      class="img-fluid"
-                    />
-                  </div>
-                  <div class="feature-item-content">
-                    <h4>React</h4>
-                  </div>
+                <div class="feature-item-content">
+                  <h4>React</h4>
                 </div>
               </div>
             </div>
-            <div class="swiper-button-next"></div>
-            <div class="swiper-button-prev"></div>
+            <div>
+              <div class="feature-item text-center">
+                <div class="feature-item-img">
+                  <img
+                    src="assets/image/vue.png"
+                    alt="web-design-icon"
+                    class="img-fluid"
+                  />
+                </div>
+                <div class="feature-item-content">
+                  <h4>VUE</h4>
+                </div>
+              </div>
+            </div>
+            <div>
+              <div class="feature-item text-center">
+                <div class="feature-item-img">
+                  <img
+                    src="assets/image/node.png"
+                    alt="web-design-icon"
+                    class="img-fluid"
+                  />
+                </div>
+                <div class="feature-item-content">
+                  <h4>Node js</h4>
+                </div>
+              </div>
+            </div>
+            <div>
+              <div class="feature-item text-center">
+                <div class="feature-item-img">
+                  <img
+                    src="assets/image/laravel.png"
+                    alt="web-design-icon"
+                    class="img-fluid"
+                  />
+                </div>
+                <div class="feature-item-content">
+                  <h4>Laravel</h4>
+                </div>
+              </div>
+            </div>
+            <div>
+              <div class="feature-item text-center">
+                <div class="feature-item-img">
+                  <img
+                    src="assets/image/react.png"
+                    alt="web-design-icon"
+                    class="img-fluid"
+                  />
+                </div>
+                <div class="feature-item-content">
+                  <h4>React</h4>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -818,6 +814,106 @@
       </div>
     </section>
     <!-- ===== top-instructor-part end ===== -->
+    <!-- ===== membership-part start ===== -->
+    <section id="membership-part" class="section-padding">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12 text-center">
+            <h2>Our Membership Plan</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4">
+            <div class="membership-box">
+              <div class="card text-center">
+                <h5 class="title">Basic</h5>
+                <div class="price">
+                  <h4><sup>$</sup>25</h4>
+                </div>
+                <div class="option">
+                  <ul>
+                    <li>
+                      <i class="fa fa-check" aria-hidden="true"></i>10 GB Space
+                    </li>
+                    <li>
+                      <i class="fa fa-check" aria-hidden="true"></i>3 Domain
+                      Names
+                    </li>
+                    <li>
+                      <i class="fa fa-check" aria-hidden="true"></i>20 Email
+                      Address
+                    </li>
+                    <li>
+                      <i class="fa fa-check" aria-hidden="true"></i>Live Support
+                    </li>
+                  </ul>
+                </div>
+                <a href="#">Order Now</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="membership-box">
+              <div class="card text-center">
+                <h5 class="title">Basic</h5>
+                <div class="price">
+                  <h4><sup>$</sup>25</h4>
+                </div>
+                <div class="option">
+                  <ul>
+                    <li>
+                      <i class="fa fa-check" aria-hidden="true"></i>10 GB Space
+                    </li>
+                    <li>
+                      <i class="fa fa-check" aria-hidden="true"></i>3 Domain
+                      Names
+                    </li>
+                    <li>
+                      <i class="fa fa-check" aria-hidden="true"></i>20 Email
+                      Address
+                    </li>
+                    <li>
+                      <i class="fa fa-check" aria-hidden="true"></i>Live Support
+                    </li>
+                  </ul>
+                </div>
+                <a href="#">Order Now</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="membership-box">
+              <div class="card text-center">
+                <h5 class="title">Basic</h5>
+                <div class="price">
+                  <h4><sup>$</sup>25</h4>
+                </div>
+                <div class="option">
+                  <ul>
+                    <li>
+                      <i class="fa fa-check" aria-hidden="true"></i>10 GB Space
+                    </li>
+                    <li>
+                      <i class="fa fa-check" aria-hidden="true"></i>3 Domain
+                      Names
+                    </li>
+                    <li>
+                      <i class="fa fa-check" aria-hidden="true"></i>20 Email
+                      Address
+                    </li>
+                    <li>
+                      <i class="fa fa-check" aria-hidden="true"></i>Live Support
+                    </li>
+                  </ul>
+                </div>
+                <a href="#">Order Now</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- ===== membership-part end ===== -->
     <!-- ===== news-events-part start ===== -->
     <section id="news-events-part" class="section-padding">
       <div class="container">
