--- a/instructors.html
+++ b/instructors.html
@@ -21,6 +21,8 @@
     />
     <!-- ===== venoboxjs css link ===== -->
     <link rel="stylesheet" href="assets/css/venobox.min.css" />
+    <!-- ===== lineicon css link ===== -->
+    <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet" />
     <!-- ===== main css link ===== -->
     <link rel="stylesheet" href="assets/css/style.css" />
     <!-- ===== responsive css link ===== -->
@@ -123,7 +125,7 @@
         <div class="text-center">
           <h2>Our Top instructors</h2>
         </div>
-        <div class="owl-carousel owl-theme">
+        <div class="owl-carousel owl-theme instructor-carousel">
           <div class="item">
             <div class="card news-box">
               <div class="news-box-img">
