support part done

--- a/index.html
+++ b/index.html
@@ -814,6 +814,131 @@
       </div>
     </section>
     <!-- ===== top-instructor-part end ===== -->
+    <!-- ===== support&facilities-part start ===== -->
+    <section id="support-part" class="section-padding">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12 text-center">
+            <h2>Our Membership Plan</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-3">
+            <div class="card support-item-box text-center">
+              <div class="support-item-img text-center">
+                <img src="assets/image/content.svg" alt="" class="img-fluid" />
+              </div>
+              <h3>Content created by experts</h3>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor,
+                delectus id culpa quae odio maxime.
+              </p>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card support-item-box text-center">
+              <div class="support-item-img text-center">
+                <img src="assets/image/support.svg" alt="" class="img-fluid" />
+              </div>
+              <h3>Direct support from mentors</h3>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor,
+                delectus id culpa quae odio maxime.
+              </p>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card support-item-box text-center">
+              <div class="support-item-img text-center">
+                <img src="assets/image/project.svg" alt="" class="img-fluid" />
+              </div>
+              <h3>Projects and Assignments</h3>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor,
+                delectus id culpa quae odio maxime.
+              </p>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card support-item-box text-center">
+              <div class="support-item-img text-center">
+                <img
+                  src="assets/image/freelance.svg"
+                  alt=""
+                  class="img-fluid"
+                />
+              </div>
+              <h3>Freelancing Guidelines, Support</h3>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor,
+                delectus id culpa quae odio maxime.
+              </p>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card support-item-box text-center">
+              <div class="support-item-img text-center">
+                <img
+                  src="assets/image/internship.svg"
+                  alt=""
+                  class="img-fluid"
+                />
+              </div>
+              <h3>Job and internship opportunities</h3>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor,
+                delectus id culpa quae odio maxime.
+              </p>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card support-item-box text-center">
+              <div class="support-item-img text-center">
+                <img
+                  src="assets/image/interview.svg"
+                  alt=""
+                  class="img-fluid"
+                />
+              </div>
+              <h3>Career and interview preparation</h3>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor,
+                delectus id culpa quae odio maxime.
+              </p>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card support-item-box text-center">
+              <div class="support-item-img text-center">
+                <img
+                  src="assets/image/certificate.svg"
+                  alt=""
+                  class="img-fluid"
+                />
+              </div>
+              <h3>Verified Certificate</h3>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor,
+                delectus id culpa quae odio maxime.
+              </p>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card support-item-box text-center">
+              <div class="support-item-img text-center">
+                <img src="assets/image/learning.svg" alt="" class="img-fluid" />
+              </div>
+              <h3>Learning at your convenience</h3>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor,
+                delectus id culpa quae odio maxime.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- ===== support&facilities-part end ===== -->
     <!-- ===== membership-part start ===== -->
     <section id="membership-part" class="section-padding">
       <div class="container">
