--- a/index.html
+++ b/index.html
@@ -819,7 +819,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12 text-center">
-            <h2>Our Membership Plan</h2>
+            <h2>Our support and facilities</h2>
           </div>
         </div>
         <div class="row">
